--- a/CUBEIDE/Projektv2.ioc
+++ b/CUBEIDE/Projektv2.ioc
@@ -1,20 +1,30 @@
 #MicroXplorer Configuration settings - do not modify
+ARM.CMSIS.5.6.0.CMSISJjCORE=true
+ARM.CMSIS.5.6.0.CMSISJjCORE_Checked=true
+ARM.CMSIS.5.6.0.CMSISJjDSP=Library
+ARM.CMSIS.5.6.0.CMSISJjDSP_Checked=true
+ARM.CMSIS.5.6.0.IPParameters=CMSISJjCORE,CMSISJjDSP
+ARM.CMSIS.5.6.0_SwParameter=CMSISJjDSP\:Library;CMSISJjCORE\:true;
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x00808CD2
 KeepUserPlacement=false
 Mcu.CPN=STM32F746ZGT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP1=I2C1
+Mcu.IP10=USART3
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM8
+Mcu.IPNb=12
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -35,31 +45,38 @@ Mcu.Pin21=PD8
 Mcu.Pin22=PD9
 Mcu.Pin23=PG6
 Mcu.Pin24=PG7
-Mcu.Pin25=PC7
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin25=PC6
+Mcu.Pin26=PC7
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PG11
-Mcu.Pin34=PG13
-Mcu.Pin35=PB3
-Mcu.Pin36=PB7
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PG11
+Mcu.Pin35=PG13
+Mcu.Pin36=PB3
+Mcu.Pin37=PB5
+Mcu.Pin38=PB7
+Mcu.Pin39=PB8
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin40=PB9
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin45=VP_ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0
+Mcu.Pin46=VP_ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=41
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=47
+Mcu.ThirdParty0=ARM.CMSIS.5.6.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
 MxCube.Version=6.6.1
@@ -75,8 +92,9 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
@@ -158,10 +176,16 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SW0
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB5.Signal=S_TIM3_CH2
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
@@ -184,7 +208,8 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Signal=ETH_RXD1
-PC7.Signal=S_TIM3_CH2
+PC6.Signal=S_TIM8_CH1
+PC7.Signal=S_TIM8_CH2
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -204,8 +229,6 @@ PG13.GPIOParameters=GPIO_Label
 PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Signal=ETH_TXD0
-PG6.GPIOParameters=GPIO_Label
-PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
 PG6.Signal=GPIO_Output
 PG7.GPIOParameters=GPIO_Label
@@ -248,7 +271,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -340,6 +363,10 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,Encoder_Interface
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,Encoder_Interface
+SH.S_TIM8_CH2.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM1.IPParameters=Prescaler,AutoReloadPreload
 TIM1.Prescaler=71
@@ -357,11 +384,17 @@ TIM3.Prescaler=71
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=9999
 TIM4.Prescaler=71
+TIM8.IPParameters=Period
+TIM8.Period=29
 USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0.Mode=CMSISJjCORE
+VP_ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0.Signal=ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0
+VP_ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0.Mode=CMSISJjDSP
+VP_ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0.Signal=ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
